well overdue update to kafka streaming [2]